--- a/project.properties
+++ b/project.properties
@@ -10,3 +10,4 @@
 # Project target.
 target=Google Inc.:Google APIs:16
 android.library=true
+android.library.reference.1=../../../../../../Tools/android/extras/google/google_play_services/libproject/google-play-services_lib
